# GraphicsJS

./: .babelrc  .gitignore  CMakeLists.txt  Makefile  README.md  index.html  package.json  webpack.config.js
CLIENT/js/: common.js  index.js
CLIENT/js/components/: layout.js  viewport.js
EMSCRIPTEN/: CMakeLists.txt  Makefile  canvas.cpp  canvas_exports.txt  exports.txt  main.cpp  shaders.cpp
SERVER/: main.js  main.pug
SERVER/CLIENT/emscripten/: Makefile  canvas.js
SERVER/CLIENT/js/: common.js  index.js
SERVER/CLIENT/js/components/: centralWindow.js
SERVER/src/: actions.js  configureStore.js  index.jsx
SERVER/src/components/: canvas.jsx  horizontal-layout.jsx  layout-item.jsx  layout.jsx  panel-layout.jsx  utils.js  vertical-panel-layout.jsx
SERVER/src/emscripten/: canvas.js
SERVER/viewport/: app.js  instance.js  main.pug
canvas/: CMakeLists.txt
canvas/include/: shaders.h
core/: CMakeLists.txt
core/include/: graphicsjs.h
emscripten/: graphics.js
fluid/: CMakeLists.txt  container.cpp  grid.cpp  mac_grid.cpp
fluid/include/: container.h  grid.h  mac_grid.h  particle.h
js/: common.js  index.js
js/layouts/: default.js
src/: actions.js  index.jsx  reducers.js  scene.js
src/components/: app.jsx  canvas.jsx  central-window.jsx  component-wrapper.jsx  context-menu.jsx  flags.js  horizontal-panel-layout.jsx  layout-item.jsx  panel-layout.jsx  property-field.jsx  settings-particle.jsx  settings.jsx  splitter.jsx  utils.js  vertical-layout.jsx  viewport.jsx
src/layouts/: default.js
src/style/: app.scss  canvas.scss  component.scss  context-menu.scss  layout.scss  settings.scss  viewport.scss
